[package]
name = "margo_os"
version = "0.1.0"
authors = ["modest-as <modestas.petravicius@gmail.com>"]

[dev-dependencies]
array-init = "0.0.3"

[dependencies]
volatile = "0.2.3"
bootloader = "0.3.12"
spin = "0.4.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "x86_64-margo_os.json"
